Dynamique tree loading !

--- a/ged-webapp/src/main/resources/properties/default_values.fr_fr.properties
+++ b/ged-webapp/src/main/resources/properties/default_values.fr_fr.properties
@@ -1,2 +1,7 @@
 default.library.name=Documents
 default.library.description=Espace contenant mes documents
+
+default.directory.name=Bienvenue
+
+default.document.name=GED
+default.document.path=welcome/ged.pdf
