--- a/edm-webapp/src/main/resources/properties/default_values.fr_fr.properties
+++ b/edm-webapp/src/main/resources/properties/default_values.fr_fr.properties
@@ -4,4 +4,4 @@ default.library.description=Espace contenant mes documents
 default.directory.name=Bienvenue
 
 default.document.name=GED
-default.document.path=welcome/ged.pdf
+default.document.path=/welcome/ged.pdf
