--- a/edm-webapp/src/main/resources/properties/default_values.fr_fr.properties
+++ b/edm-webapp/src/main/resources/properties/default_values.fr_fr.properties
@@ -4,5 +4,5 @@ default.library.description=Espace contenant mes documents
 default.directory.name=Bienvenue
 
 default.document.name=GED
-default.document.description=Un document de démonstration !
+default.document.description=Un document de dÃ©monstration !
 default.document.path=/welcome/ged.pdf
